--- a/wdioConfig/WDIO.config
+++ b/wdioConfig/WDIO.config
@@ -1,6 +1,6 @@
 import video from 'wdio-video-reporter';
 import { exec } from 'child_process';
-import fs from 'fs-extra'
+import fs from 'fs-extra';
 
 // Function to clean the specified directory
 function cleanDirectory(directoryPath) {
@@ -73,7 +73,7 @@ export const config = {
     capabilities: [{
         browserName: 'chrome',
         'goog:chromeOptions': {
-            //args: ['--window-size=1920,1080','--headless', '--disable-gpu', '--no-sandbox', '--disable-dev-shm-usage'],
+           //args: [' --window-size=1920,1080',' --headless', '--disable-gpu', '--no-sandbox', '--disable-dev-shm-usage'],
         }
     }],
 
@@ -84,7 +84,7 @@ export const config = {
     // Define all options that are relevant for the WebdriverIO instance here
     //
     // Level of logging verbosity: trace | debug | info | warn | error | silent
-    logLevel: 'info',
+    logLevel: 'debug',
     //
     // Set specific log levels per logger
     // loggers:
@@ -108,7 +108,7 @@ export const config = {
     // with `/`, the base url gets prepended, not including the path portion of your baseUrl.
     // If your `url` parameter starts without a scheme or `/` (like `some/path`), the base url
     // gets prepended directly.
-    baseUrl: 'https://musclemeat.nl/',
+    baseUrl: 'https://www.salesforce.com/nl/',
     //
     // Default timeout for all waitFor* commands.
     waitforTimeout: 10000,
@@ -124,7 +124,7 @@ export const config = {
     // Services take over a specific job you don't want to take care of. They enhance
     // your test setup with almost no effort. Unlike plugins, they don't add new
     // commands. Instead, they hook themselves up into the test process.
-    // services: [],
+    services: [],
     //
     // Framework you want to run your specs with.
     // The following are supported: Mocha, Jasmine, and Cucumber
@@ -148,19 +148,19 @@ export const config = {
     // see also: https://webdriver.io/docs/dot-reporter
 
     // after test is run to receive the report with videos type in command --> allure serve _results_/allure-raw
-    // anither way to generate a test report allure generate --clean
+    // another way to generate a test report --> // allure generate --clean --output ./_results_/allure-report
     reporters: ['spec',
         [
             video,
         {
             saveAllVideos: true,
-            outputDir: './reporting'
+            outputDir: "./reporting",
+            videoSlowdownMultiplier: 9
         }],
         ['allure', {
-            outputDir: './reporting/allure-results',
+            outputDir: './reporting',
             disableWebdriverStepsReporting: true,
             disableWebdriverScreenshotsReporting: true,
-            disableMochaHooks: true
         }],
     ],
     //
@@ -168,7 +168,7 @@ export const config = {
     // See the full list at http://mochajs.org/
     mochaOpts: {
         ui: 'bdd',
-        timeout: 300000
+        timeout: 60000
     },
     //
     // =====
@@ -295,7 +295,7 @@ export const config = {
      */
     
     after: function(test) {
-        exec('allure serve reporting', (error, stdout, stderr) => {
+        exec('allure serve ./reporting', (error, stdout, stderr) => {
             if (error) {
                 console.error(`Error: ${error.message}`);
                 return;
@@ -320,7 +320,7 @@ export const config = {
      * @param {Array.<Object>} capabilities list of capabilities details
      * @param {<Object>} results object containing test results
      */
-    // onComplete: function(exitCode, config, capabilities, results) {
+    // onComplete: function(test) {
     // },
     /**
     * Gets executed when a refresh happens.
