--- a/wdioConfig/WDIO.config
+++ b/wdioConfig/WDIO.config
@@ -26,7 +26,7 @@ export const config = {
     specs: ['./test/**/dragAndDrop.js'],
     
     // Patterns to exclude.
-    // exclude: ['./test/**/dragAndDrop.js'],
+    // exclude: ['./test/**/*.js'],
     //
     // ============
     // Capabilities
