--- a/wdioConfig/WDIO.config
+++ b/wdioConfig/WDIO.config
@@ -303,6 +303,7 @@ export const config = {
      * @param {Array.<Object>} capabilities list of capabilities details
      * @param {<Object>} results object containing test results
      */
+    // un-commentout import allure statement on top of the document when enabling the onComplete() hook
     // onComplete: function () {
     //     const reportError = new Error("Could not generate Allure report");
     //     const generation = allure(["generate", "allure-results", "--clean"]);
