--- a/wdioConfig/WDIO.config
+++ b/wdioConfig/WDIO.config
@@ -27,6 +27,12 @@ export const config = {
     
     // Patterns to exclude.
     // exclude: ['./test/**/*.js'],
+    // suites: {
+    //     smoke: [
+    //         'test/specs/loginMuscleMeat.js', // npx wdio --suite smoke // copy relative path
+    //         'test/specs/order.js'
+    //     ]
+    // },
     //
     // ============
     // Capabilities
